unpackaged/main/default/objects/Sales_Agent__c/Sales_Agent__c.object-meta.xml
<CustomObject>
    <label>Sales Agent</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Agents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>