unpackaged/main/default/objects/Sales_Agent__c/fields/First_Name__c.field-meta.xml
<CustomField>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>