unpackaged/main/default/objects/Sales_Agent__c/fields/Newstar_ID__c.field-meta.xml
<CustomField>
        <fullName>Newstar_ID__c</fullName>
        <externalId>true</externalId>
        <label>Newstar ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>