unpackaged/main/default/objects/Sales_Agent__c/fields/Related_to_User__c.field-meta.xml
<CustomField>
        <fullName>Related_to_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related to User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Agents</relationshipName>
        <type>Lookup</type>
    </CustomField>